--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -1,32 +1,31 @@
 .hero
+  background: url(../img/hero/hero-image.png) no-repeat 75%
+  background-size: contain
+  margin-top: 70px
   &-block
-    display: flex    
-  &-text
-    margin-top: 120px
-    flex-basis: 40%
+    padding-top: 30px
+    padding-bottom: 223px
+    display: flex
+  &-text    
     &__title
+      max-width: 580px
       +playfair
       font-size: 36px
-      min-width: 125%
       line-height: 48px
     &__subtitle
       margin-top: 21px
       display: block
       +roboto-bold
       font-size: 18px
-  &-image
-    margin-top: 90px
-    flex-basis: 60%
-    &__img
-      min-width: 115%
   &-list
-    margin-top: 42px
+    margin-top: 45px
     margin-right: 50px
     display: flex
+    max-width: 400px
     flex-direction: row
     flex-wrap: wrap
     &__button
-      margin-top: 69px
+      margin-top: 50px
       &:hover
         background-color: darken($main-color, 10%)
     &__item
@@ -37,6 +36,10 @@
       min-height: 40px
       min-width: 40px
       margin-right: 3px
+@media (max-width: 1450px)
+  .hero
+    background: url(../img/hero/hero-image.png) no-repeat 85%
+    background-size: contain
     
 
 // .hero
