--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -40,45 +40,27 @@
   .hero
     background: url(../img/hero/hero-image.png) no-repeat 85%
     background-size: contain
-    
-
-// .hero
-//   &-block
-//     display: flex    
-//   &-text
-//     margin-top: 120px
-//     flex-basis: 40%
-//     &__title
-//       +playfair
-//       font-size: 36px
-//       min-width: 125%
-//       line-height: 48px
-//     &__subtitle
-//       margin-top: 21px
-//       display: block
-//       +roboto-bold
-//       font-size: 18px
-//   &-image
-//     margin-top: 90px
-//     flex-basis: 60%
-//     &__img
-//       min-width: 115%
-//   &-list
-//     margin-top: 42px
-//     margin-right: 50px
-//     display: flex
-//     flex-direction: row
-//     flex-wrap: wrap
-//     &__button
-//       margin-top: 69px
-//       &:hover
-//         background-color: darken($main-color, 10%)
-//     &__item
-//       width: 48%
-//       margin-top: 25px
-//       display: flex
-//     &__image
-//       min-height: 40px
-//       min-width: 40px
-//       margin-right: 3px
-      
+@media (max-width: 1200px)
+  .hero
+    background: url(../img/hero/hero-image.png) no-repeat 550px
+    background-size: contain
+@media (max-width: 768px)
+  .hero
+    background: url(../img/hero/hero-image.png) no-repeat 400px
+    background-size: contain
+@media (max-width: 480px)
+  .hero
+    background: url(../img/hero/hero-mobile-image.png) no-repeat 193px 136px
+    background-size: 72%
+    margin-top: 31px
+    &-text
+      &__title
+        font-size: 18px
+        line-height: 24px
+      &__subtitle
+        font-size: 14px
+    &-list
+      margin-top: 20px
+      flex-direction: column
+      &__item
+        width: 170px
