--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -14,3 +14,7 @@
   font-family: Playfair Display, sans-serif;
   font-weight: 900;
 }
+@mixin playfair-normal {
+  font-family: Playfair Display, sans-serif;
+  font-weight: 400;
+}
