--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -9,6 +9,18 @@ body
 .container
   width: 1140px
   margin: auto
+.button
+  padding: 20px 50px
+  display: inline-block
+  font-size: 16px
+  +roboto-900
+  border-radius: 5px
+  background: #FFCC69
+  cursor: pointer
+.header-title
+  font-size: 24px
+  line-height: 32px
+  +playfair
 @media (max-width: 1200px)
   .container
     width: 760px
@@ -20,11 +32,3 @@ body
   .container
     width: 750px
     width: 85%
-.button
-  padding: 20px 50px
-  display: inline-block
-  font-size: 16px
-  +roboto-900
-  border-radius: 5px
-  background: #FFCC69
-  cursor: pointer
