--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -45,6 +45,9 @@
         align-items: center
 @media (max-width: 768px)
   .offer
+    &-feature
+      &__title
+        margin-top: 92px
     &-block
       &__button
         font-size: 14px
