--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -15,8 +15,10 @@ body
   font-size: 16px
   +roboto-900
   border-radius: 5px
-  background: #FFCC69
+  background: $main-color
   cursor: pointer
+  &:hover
+    background-color: darken($main-color, 10%)
 .header-title
   font-size: 24px
   line-height: 32px
