--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -12,6 +12,7 @@ body
 .button
   padding: 20px 50px
   display: inline-block
+  text-align: center
   font-size: 16px
   +roboto-900
   border-radius: 5px
