Сверстан и адаптирован слайдер сайта

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -24,6 +24,14 @@ body
   font-size: 24px
   line-height: 32px
   +playfair
+.header-description
+  margin-top: 21px
+  font-size: 16px
+  line-height: 150%
+  color: $text-color-gray
+.section
+  padding-top: 65px
+  padding-bottom: 65px
 @media (max-width: 1200px)
   .container
     width: 760px
@@ -31,6 +39,12 @@ body
   .container
     max-width: 580px
     width: 95%
+  .header-description
+    margin-top: 15px
+    font-size: 14px
+    margin-bottom: 0
+  .header-title
+    font-size: 16px
 @media (max-width: 480px)
   .container
     width: 750px
