--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,7 @@
 @import '_colors.sass'
 @import '_fonts.scss'
 @import '_normalize.scss'
+@import '_slick.scss'
 @import '_interface.sass'
 @import '_reset.sass'
 
@@ -9,3 +10,4 @@
 @import 'blocks/_navbar.sass'
 @import 'blocks/_hero.sass'
 @import 'blocks/_offer.sass'
+@import 'blocks/_projects.sass'
