--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -1,12 +1,8 @@
 .offer
   &-feature
     &__title
-      margin-top: 112px
     &__subtitle
-      margin-top: 21px
-      line-height: 150%
       max-width: 460px
-      color: #666666
   &-block
     display: flex
     justify-content: space-between
@@ -45,10 +41,9 @@
         align-items: center
 @media (max-width: 768px)
   .offer
-    &-feature
-      &__title
-        margin-top: 92px
     &-block
+      &s
+        margin-top: 30px
       &__button
         font-size: 14px
         padding: 20px 44px
