--- a/src/sass/_slick.scss
+++ b/src/sass/_slick.scss
@@ -135,3 +135,58 @@
     margin: 0;
   }
 }
+.accordionItem {
+  display:block;
+  width:100%;
+  box-sizing: border-box;
+  font-family:'Open-sans', Arial,sans-serif;
+}
+.accordionItemHeading{
+  cursor:pointer;
+  margin:0px 0px 10px 0px;
+  padding:10px;
+  background:#2980b9;
+  color:#fff;
+  width:100%;
+  -webkit-border-radius: 3px;
+-moz-border-radius: 3px;
+border-radius: 3px;
+      box-sizing: border-box;
+}
+.close .accordionItemContent{
+  height:0px;
+  transition:height 1s ease-out;
+  -webkit-transform: scaleY(0);
+-o-transform: scaleY(0);
+-ms-transform: scaleY(0);
+transform: scaleY(0);
+  float:left;
+  display:block;  
+}
+.open .accordionItemContent{
+      padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  width: 100%;
+  margin: 0px 0px 10px 0px;
+  display:block;
+  -webkit-transform: scaleY(1);
+-o-transform: scaleY(1);
+-ms-transform: scaleY(1);
+transform: scaleY(1);
+  -webkit-transform-origin: top;
+-o-transform-origin: top;
+-ms-transform-origin: top;
+transform-origin: top;
+-webkit-transition: -webkit-transform 0.4s ease-out;
+-o-transition: -o-transform 0.4s ease;
+-ms-transition: -ms-transform 0.4s ease;
+transition: transform 0.4s ease;
+      box-sizing: border-box;
+}
+
+.open .accordionItemHeading{
+  margin:0px;
+  background-color: #bdc3c7;
+  color: #7f8c8d;
+}
