--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1305,4 +1305,78 @@ button {
     margin-bottom: 30px;
   }
 }
+
+.something {
+  margin-top: 20px;
+}
+
+.something-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.something-image {
+  -ms-flex-preferred-size: 51%;
+      flex-basis: 51%;
+}
+
+.something-image img {
+  min-width: 107%;
+}
+
+.something-ask {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.something-ask__subtitle {
+  margin-top: 21px;
+}
+
+.something-ask__button {
+  margin-top: 40px;
+  background: transparent;
+  border: 2px solid #FFCC69;
+  padding: 19px 80px;
+}
+
+.something-ask__button:hover {
+  background: #FFCC69;
+}
+
+@media (max-width: 768px) {
+  .something {
+    margin-top: 10px;
+  }
+  .something-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .something-image {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .something-image img {
+    min-width: 100%;
+  }
+  .something-ask {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .something-ask__button {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 480px) {
+  .something-ask__button {
+    width: 100%;
+  }
+}
 /*# sourceMappingURL=style.css.map */
