--- a/src/sass/blocks/_adress.sass
+++ b/src/sass/blocks/_adress.sass
@@ -53,6 +53,7 @@
       right: 0
 @media (max-width: 480px)
   .adress
+    &-map
     &-contacts
       padding: 45px 29px 50px 34px
       width: 85%
@@ -73,5 +74,6 @@
       &__button
         margin-top: 16px
         font-size: 16px
-  yamaps
-    max-height: 300px
+  ymaps
+    &:first-child
+      max-height: 300px
