--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1494,4 +1494,96 @@ button {
     max-height: 300px;
   }
 }
+
+.footer {
+  background-color: #72758E;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.footer-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-logo__text {
+  margin-left: 10px;
+  margin-top: 2px;
+}
+
+.footer-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+}
+
+.footer__politics {
+  display: block;
+  z-index: 2;
+}
+
+.footer__politics a:visited {
+  color: #fff;
+}
+
+.footer__politics a:after {
+  content: '';
+  z-index: 1;
+  display: block;
+  width: 100%;
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+  height: 1px;
+  background: #FFF;
+}
+
+.footer__telephone {
+  font-size: 18px;
+}
+
+.footer__telephone a {
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 40px 0px 60px 0px;
+  }
+  .footer-block {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer {
+    padding: 40px 0px 60px 0px;
+  }
+  .footer-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer-logo {
+    margin-bottom: 45px;
+  }
+  .footer__politics {
+    margin-bottom: 45px;
+    font-size: 14px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
