Верстка всего макета закончена кроме подбора текста и картинок к динамическим элементам

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -32,6 +32,9 @@ body
 .section
   padding-top: 65px
   padding-bottom: 65px
+#username-error, #telephone-error
+  color: $answer-color
+  padding: 4px 0px 0px 3px
 @media (max-width: 1200px)
   .container
     width: 760px
