--- a/src/css/style.css
+++ b/src/css/style.css
@@ -598,6 +598,11 @@ body {
   padding-bottom: 65px;
 }
 
+#username-error, #telephone-error {
+  color: #72758E;
+  padding: 4px 0px 0px 3px;
+}
+
 @media (max-width: 1200px) {
   .container {
     width: 760px;
@@ -650,6 +655,42 @@ input {
 
 .slick-slide:focus {
   outline: none;
+}
+
+.popup-fade {
+  display: none;
+}
+
+.popup-fade:before {
+  content: '';
+  background: #000;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  z-index: 9999;
+}
+
+.popup {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  padding: 20px;
+  width: 360px;
+  margin-left: -200px;
+  background: #fff;
+  border: 1px solid orange;
+  border-radius: 4px;
+  z-index: 99999;
+  opacity: 1;
+}
+
+.popup-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .navbar-block {
@@ -1595,17 +1636,47 @@ input {
 }
 
 .modal {
-  width: 550px;
+  display: none;
   margin: auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-shadow: 0px 4px 44px rgba(184, 184, 184, 0.25);
-          box-shadow: 0px 4px 44px rgba(184, 184, 184, 0.25);
+  position: fixed;
+  top: 20%;
+  left: 0%;
+  right: 0;
+  padding: 20px;
+  z-index: 99999;
+  opacity: 1;
+}
+
+.modal::before {
+  content: '';
+  background-color: #000000;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  z-index: 9999;
+}
+
+.modal-close_close {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  font-size: 30px;
+  cursor: pointer;
 }
 
 .modal-block {
-  padding: 25px 0px 60px 0px;
+  width: 480px;
+  -webkit-box-shadow: 0px 4px 44px rgba(184, 184, 184, 0.25);
+          box-shadow: 0px 4px 44px rgba(184, 184, 184, 0.25);
+  border-radius: 4px;
+  background: #fff;
+  padding: 25px 0px 30px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1613,6 +1684,9 @@ input {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  opacity: 1;
+  position: fixed;
+  z-index: 999999;
 }
 
 .modal-block__image {
@@ -1673,10 +1747,20 @@ input {
 
 .modal-block__form-button {
   margin-top: 10px;
+  padding: 20px 50px;
+  display: inline-block;
+  text-align: center;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  border-radius: 5px;
+  background: #FFCC69;
+  cursor: pointer;
+  text-transform: uppercase;
 }
 
 @media (max-width: 768px) {
-  .modal {
+  .modal-block {
     width: 80%;
   }
   .modal-block__title {
