--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -1,12 +1,41 @@
 .modal
-  width: 550px
+  display: none  
   margin: auto
   justify-content: center
-  box-shadow: 0px 4px 44px rgba(184, 184, 184, 0.25)
+  position: fixed
+  top: 20%
+  left: 0%
+  right: 0
+  padding: 20px 
+  z-index: 99999
+  opacity: 1
+  &::before
+    content: ''
+    background-color: #000000
+    position: fixed
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    opacity: 0.7
+    z-index: 9999
+  &-close_close
+    position: absolute
+    top: 5px
+    right: 10px
+    font-size: 30px
+    cursor: pointer
   &-block
-    padding: 25px 0px 60px 0px
+    width: 480px
+    box-shadow: 0px 4px 44px rgba(184, 184, 184, 0.25)
+    border-radius: 4px
+    background: #fff
+    padding: 25px 0px 30px 0px
     display: flex
     flex-direction: column
+    opacity: 1
+    position: fixed
+    z-index: 999999
     &__image
       background: url(../img/modal.jpg) no-repeat
       height: 80px
@@ -34,10 +63,19 @@
           color: $answer-color
       &-button
         margin-top: 10px
+        padding: 20px 50px
+        display: inline-block
+        text-align: center
+        font-size: 16px
+        +roboto-900
+        border-radius: 5px
+        background: $main-color
+        cursor: pointer
+        text-transform: uppercase
 @media (max-width: 768px)
-  .modal
-    width: 80%
+  .modal    
     &-block
+      width: 80%
       &__title
         font-size: 16px
 @media (max-width: 480px)
