--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1290,6 +1290,14 @@ input {
   color: #72758E;
 }
 
+.questions-answer__subtitle a {
+  color: #72758E;
+}
+
+.questions-answer__subtitle a:visited {
+  color: #72758E;
+}
+
 .questions-answer.open .questions-answer__title::after {
   content: url("../img/questions/arrow-bottom.svg");
 }
@@ -1581,6 +1589,10 @@ input {
   z-index: 2;
 }
 
+.footer__politics a {
+  color: #fff;
+}
+
 .footer__politics a:visited {
   color: #fff;
 }
@@ -1747,7 +1759,7 @@ input {
 
 .modal-block__form-button {
   margin-top: 10px;
-  padding: 20px 50px;
+  padding: 20px 15px;
   display: inline-block;
   text-align: center;
   font-size: 16px;
