--- a/src/sass/blocks/_questions.sass
+++ b/src/sass/blocks/_questions.sass
@@ -27,6 +27,10 @@
         line-height: 160%
         margin: 0px 30px 0px 22px
         color: $answer-color
+        a
+          color: $answer-color
+          &:visited
+            color: $answer-color
 .questions-answer.open .questions-answer__title
   &::after
     content: url('../img/questions/arrow-bottom.svg')
